--- a/Carrito/Site.Master
+++ b/Carrito/Site.Master
@@ -11,11 +11,23 @@
 
     <asp:PlaceHolder runat="server">
         <%: Scripts.Render("~/bundles/modernizr") %>
-    </asp:PlaceHolder>
+    </asp:PlaceHolder
+        >
 
-    <webopt:bundlereference runat="server" path="~/Content/css" />
+     <%--STYLESHEETS--%>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" />
+    <webopt:BundleReference runat="server" Path="~/Content/css" />
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
 
+     <%--SCRIPTS--%>
+    <script src="https://kit.fontawesome.com/0c5b036370.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    
 </head>
 <body>
     <form runat="server">
@@ -39,25 +51,6 @@
             </Scripts>
         </asp:ScriptManager>
 
-        <%--
-        <div class="navbar navbar-inverse navbar-fixed-top">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse" title="more options">
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" runat="server" href="~/">Catalogo</a>
-                </div>
-                <div class="navbar-collapse collapse">
-                    <ul class="nav navbar-nav">
-                        <li><a runat="server" href="~/Carrito">Carrito</a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>    --%>
-
  <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark" style="position:fixed; width:100%;margin-top:-50px; z-index:99;">
   <div class="container-fluid">
     <a class="navbar-brand" href="Default.aspx">Catalogo</a>
@@ -68,10 +61,13 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="Carrito.aspx">Carrito</a>
-        </li>           
-        <li class="nav-item">
-          <a class="nav-link disabled">Articulo:</a>
-        </li>
+        </li>              
+          <li>
+                        <asp:LinkButton ID="btnCarrito" runat="server" CssClass="btn alert-primary">                             
+                         <i class="fa fa-shopping-cart" aria-hidden="true"></i>
+                     
+                        </asp:LinkButton>
+           </li>            
       </ul>
       <div class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Búsqueda..." aria-label="Search">
@@ -80,9 +76,6 @@
     </div>
   </div>
 </nav>
-
-
-
 
         <div class="container">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
